Archive2/21/d63b46b5a3a03c/output
main.cpp: In function 'int main()':
main.cpp:8:33: error: no matching function for call to 'atomic_init(std::atomic_bool*, bool)'
     std::atomic_init(&obj, false);
                                 ^
main.cpp:8:33: note: candidates are:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/atomic:814:5: note: template<class _ITp> void std::atomic_init(std::atomic<_ITp>*, _ITp)
     atomic_init(atomic<_ITp>* __a, _ITp __i) noexcept;
     ^
/usr/include/c++/4.8/atomic:814:5: note:   template argument deduction/substitution failed:
main.cpp:8:33: note:   'std::atomic_bool' is not derived from 'std::atomic<_ITp>'
     std::atomic_init(&obj, false);
                                 ^
In file included from main.cpp:1:0:
/usr/include/c++/4.8/atomic:818:5: note: template<class _ITp> void std::atomic_init(volatile std::atomic<_ITp>*, _ITp)
     atomic_init(volatile atomic<_ITp>* __a, _ITp __i) noexcept;
     ^
/usr/include/c++/4.8/atomic:818:5: note:   template argument deduction/substitution failed:
main.cpp:8:33: note:   'std::atomic_bool' is not derived from 'volatile std::atomic<_ITp>'
     std::atomic_init(&obj, false);
                                 ^
